# rule-pack

./: .gitignore  README.md  RULES.md
.cursor/: rules
.github/workflows/: ci.yml
examples/python-fastapi-app/: .importlinter  README.md
examples/python-fastapi-app-no-rules/: .editorconfig  README.md  mypy.ini  pyproject.toml  ruff.toml
examples/python-fastapi-app-no-rules/app/: main.py
examples/python-fastapi-app-no-rules/app/api/: __init__.py  users.py
examples/python-fastapi-app-no-rules/app/domain/: user.py
examples/python-fastapi-app-no-rules/app/errors/: __init__.py  base.py
examples/python-fastapi-app-no-rules/tests/: test_api.py  test_user_repository.py  test_user_service.py
examples/python-fastapi-app/.cursor/rules/: core.mdc
examples/python-fastapi-app/app/: __init__.py  deps.py
examples/python-fastapi-app/app/api/: users.py
examples/python-fastapi-app/app/errors/: exceptions.py
examples/python-fastapi-app/app/repositories/: user_repository.py
examples/python-fastapi-app/app/services/: user_service.py
examples/python-fastapi-app/tests/: conftest.py
prompts/: cursor_system.md
rules/cursor/: core.mdc  python.mdc
rules/python/: .pre-commit-config.yaml
tooling/scripts/: apply.sh  doctor.sh
