[project]
name = "python-fastapi-app"
version = "0.1.0"
description = "Sample FastAPI app for Rule Pack demo"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic[email]>=2.0",
    "pydantic-settings>=2.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pytest>=8.0.0",
    "pre-commit>=4.0.0",
    "import-linter>=2.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
